edicion en vistas

--- a/configuracion/ajustes.html
+++ b/configuracion/ajustes.html
@@ -163,12 +163,8 @@
 
         <!-- Zona de peligro -->
         <div class="bg-red-50 dark:bg-red-900/20 border-2 border-red-200 dark:border-red-800 rounded-2xl p-4">
-            <h4 class="text-red-900 dark:text-red-300 text-sm font-bold mb-3 flex items-center gap-2">
-                <span class="material-symbols-outlined">warning</span>
-                Zona de Peligro
-            </h4>
             <button onclick="deleteAccount()" class="w-full px-4 py-3 bg-red-600 text-white rounded-xl text-sm font-bold hover:bg-red-700 transition-all">
-                Eliminar mi cuenta
+                Cerrar sesion
             </button>
         </div>
 
