detalles de botones y menu de navegacion modificados en inversiones/oportunidades y propiedades/detalles

--- a/propiedades/detalles.html
+++ b/propiedades/detalles.html
@@ -178,12 +178,11 @@
     <!-- Bottom Action Bar -->
     <div class="fixed bottom-0 left-0 right-0 z-50 px-6 py-4 glass border-t border-gray-200/50">
         <div class="flex items-center gap-3">
-            <button onclick="scheduleTour()" class="flex-1 flex items-center justify-center gap-2 px-6 py-3 rounded-xl border-2 border-primary text-primary font-bold hover:bg-primary hover:text-white transition-all">
-                <span class="material-symbols-outlined">event</span>
+            <button onclick="calculateROI()" class="flex-1 flex items-center justify-center gap-2 px-6 py-3 rounded-xl border-2 border-primary text-primary font-bold hover:bg-primary/5 transition-all">
                 <span>Agendar visita</span>
             </button>
-            <button onclick="contactNow()" class="flex-1 flex items-center justify-center gap-2 px-6 py-3 rounded-xl bg-gradient-to-r from-primary to-primary-dark text-white font-bold shadow-lg hover:scale-105 transition-transform">
-                <span class="material-symbols-outlined">support_agent</span>
+            <button onclick="invest()" class="flex-1 flex items-center justify-center gap-2 px-6 py-3 rounded-xl bg-gradient-to-r from-primary to-primary-dark text-white font-bold shadow-lg hover:scale-105 transition-transform">
+                <span class="material-symbols-outlined">payments</span>
                 <span>Contactar</span>
             </button>
         </div>
